--- a/_posts/etc/2021-05-26-etc-solid.md
+++ b/_posts/etc/2021-05-26-etc-solid.md
@@ -43,4 +43,7 @@ comments: true
 ## DIP(Dependency Inversion Priciple) : 의존관계 역전 원칙
 
 <span style="color:red">`클라이언트는 구현클래스에 의존하지 말고, 인터페이스에 의존해야 한다.`</span><br>
-이렇게 되어야 구현체를 변경하더라도 클라이언트에 영향을 최소화 할 수 있다.
+이렇게 되어야 구현체를 변경하더라도 클라이언트에 영향을 최소화 할 수 있다.<br>
+<br>
+
+> Reference : <a href="https://www.inflearn.com/course/스프링-핵심-원리-기본편">인프런 [스프링 핵심 원리 - 기본편] by 김영한</a>
